# plasma6-applet-event-bar

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPECS.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/scripts/: google_oauth_server.py
package/contents/ui/: CompactView.qml  ConfigGeneral.qml  ConfigNotifications.qml  ConfigOptions.qml  EventItem.qml  FullView.qml  main.qml
package/contents/ui/lib/: CalendarApi.js  EventLogic.js  ExecUtil.qml  Log.js  Notifications.js  Requests.js
package/translate/: build  de.po  es.po  fr.po  it.po  merge  template.pot
